@@ -28,6 +28,19 @@ public class DiffCommandTest extends TestCase {
     assertEquals("/bug/code/try2/OrderDetailModel.java", diffCommand.getFromPath());
   }
 
+  public void testDiffCommandNoRevision() throws Exception {
+    String[] params = new String[]{
+        "/bug/code/try2/OrderDetailModel.java",
+        "/bug/code/try2/OrderDetailModel.java"};
+
+    // If no revision is given, assume HEAD
+    DiffCommand diffCommand = new DiffCommand(params);
+    assertEquals(-1, diffCommand.getToRevision());
+    assertEquals(-1, diffCommand.getFromRevision());
+    assertEquals("/bug/code/try2/OrderDetailModel.java", diffCommand.getToPath());
+    assertEquals("/bug/code/try2/OrderDetailModel.java", diffCommand.getFromPath());
+  }
+
   public void testDiffCommandDifferentPaths() throws Exception {
     String[] params = new String[]{
         "/bug/code/try2/OrderDetail.java;;91",
