@@ -166,6 +166,7 @@
       <td>
         <select class="sventonSelect" name="actionSelect">
           <option class="sventonSelectOption">Actions...</option>
+          <option value="diff">&nbsp;&nbsp;Diff entries</option>
           <option value="thumb">&nbsp;&nbsp;Show as thumbnails</option>
         </select><input type="submit" class="btn" value="go!"/>
       </td>
